# HyVideo-Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  HyVideo.cpp  Test.cpp  main.cpp
cmake/: shader2header.cmake
configs/in/: a.json  examIN-CUGAN.json  examIN-ESRGAN.json  examIN.json  rife.json
include/: Common.hpp  FrameConvert.hpp  GlobalConfig.hpp  IFrameGetter.hpp  InputVideo.hpp  OutputVideo.hpp  PacketReader.hpp  PacketWriter.hpp  RifeFrameGetter.hpp  Score.hpp  Task.hpp  Video.hpp  VideoFrameReader.hpp  VideoFrameWriter.hpp
include/FrameGetter/: BufferFrameGetter.hpp  IFrameGetter.hpp  RealCUGANFrameGetter.hpp  RealESRGANFrameGetter.hpp  RifeFrameGetter.hpp  VideoFrameReader.hpp
include/data/: HvFrame.hpp
include/entry/: HvFrame.hpp
include/rife/: rife.h
include/rife/comps/: rife_postproc.comp
include/utils/: Assert.hpp  Clocker.hpp  FileStr.hpp  Logger.hpp  Pause.hpp
src/: Common.cpp  FrameConvert.cpp  GlobalConfig.cpp  InputVideo.cpp  OutputVideo.cpp  PacketReader.cpp  PacketWriter.cpp  RifeFrameGetter.cpp  Score.cpp  Task.cpp  Video.cpp  VideoFrameReader.cpp  VideoFrameWriter.cpp
src/FrameGetter/: BufferFrameGetter.cpp  RealCUGANFrameGetter.cpp  RealESRGANFrameGetter.cpp  RifeFrameGetter.cpp  VideoFrameReader.cpp
src/realcugan/: realcugan.cpp
src/realesrgan/: realesrgan.cpp
src/rife/: rife.cpp  rife_v2.cpp  warp.cpp
src/tasks/: CalcScores.cpp  Transcode.cpp
src/utils/: Assert.cpp  Clocker.cpp  FileStr.cpp  Pause.cpp
